syntax = "proto3";
import "user-service.proto";
option java_multiple_files = true;
option java_package="it.trenical.server.gateway.proto";
package gateway;

service LoginService {
  rpc Register(user.SignupRequest) returns (user.LoginResponse);
  rpc Login(user.SigninRequest) returns (user.LoginResponse);
}